section (historia, politicas de calidad) + ajustes visuales

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
 </head>
 <body>
     
@@ -46,8 +47,10 @@
     </div>
   </nav>
 
+<!-- HERO -->
+
 <section class="bg-white">
-	<div class="grid max-w-screen-xl px-10 pt-20 pb-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12 lg:pt-8">
+	<div class="grid max-w-screen-xl px-10 pt-20 pb-8 mx-auto lg:gap-8 xl:gap-0 lg:py-8 lg:grid-cols-12 lg:pt-8">
 		<div class="mr-auto place-self-center lg:col-span-7">
 			<h1
 				class="max-w-2xl mb-4 text-4xl text-custom-pik-dark font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl">
@@ -71,19 +74,213 @@
 	</div>
 </section>
 
-  <div class=" grid grid-cols-1 md:grid-cols-3 py-8 px-10">
-    <div class="py-8 px-2 md:py-4 md:px-14">
+  <div class=" grid grid-cols-1 md:grid-cols-3 py-8 px-10 mb-16 gap-10 md:px-16">
+    <div class="py-8 px-2 md:py-6 md:px-14 bg-white rounded-lg shadow">
       <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">¿Quienes Somos?</h1>
-      <p class="font-light text-gray-500 text-center lg:mb-8 md:text-lg lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium nesciunt repudiandae, fugit ea nulla sequi voluptatem sed recusandae.</p>
+      <p class="font-light text-gray-500 text-center md:text-lg lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium nesciunt repudiandae, fugit ea nulla sequi voluptatem sed recusandae.</p>
     </div>
-    <div class="py-8 px-2 md:py-4 md:px-14">
+    <div class="py-8 px-2 md:py-4 md:px-14 bg-white rounded-lg shadow">
       <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">¿A Que Nos Dedicamos?</h1>
-      <p class="font-light text-gray-500 text-center lg:mb-8 md:text-lg lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium nesciunt repudiandae, fugit ea nulla sequi voluptatem sed recusandae.</p>
+      <p class="font-light text-gray-500 text-center md:text-lg lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium nesciunt repudiandae, fugit ea nulla sequi voluptatem sed recusandae.</p>
+    </div>
+    <div class="py-8 px-2 md:py-4 md:px-14 bg-white rounded-lg shadow">
+      <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">¿Que Ofrecemos?</h1>
+      <p class="font-light text-gray-500 text-center md:text-lg lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium nesciunt repudiandae, fugit ea nulla sequi voluptatem sed recusandae.</p>
+    </div>
+  </div>
+</section>
+
+<!-- HISTORIA -->
+
+<section class="mb-16">
+  <div class="max-w-[1500px] mx-auto px-10">
+      <!-- Encabezado -->
+      <div class="text-center mb-12">
+          <h2 class="mb-4 text-4xl text-custom-pik-dark font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl">Mi Historia</h2>
+          <div class="w-[280px] h-1 bg-custom-pik mx-auto"></div>
+      </div>
+
+      <!-- Contenido Principal -->
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+          <!-- Imagen -->
+          <div class="m-auto">
+              <img 
+                  src="./img/rb_2305.png"
+                  alt="Tu foto personal" 
+                  class="w-[500px] h-full object-cover"
+              >
+          </div>
+
+          <!-- Texto -->
+          <div class="space-y-6">
+              <h3 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">
+                  Un Viaje de Pasión y Propósito
+              </h3>
+              
+              <p class="text-gray-600 font-light  md:text-lg lg:text-lg">
+                  Todo comenzó cuando [tu punto de partida]. Desde entonces, 
+                  mi pasión por [tu área] me ha llevado a través de un 
+                  emocionante viaje de descubrimiento y crecimiento. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique consequatur deserunt ipsa quidem commodi ducimus fuga ad, corrupti dolor assumenda beatae asperiores voluptatem repellat odio nulla suscipit repudiandae pariatur harum?
+              </p>
+
+              <p class="text-gray-600 font-light  md:text-lg lg:text-lg">
+                  A lo largo de los años, he tenido el privilegio de [logros o 
+                  experiencias importantes]. Cada experiencia ha contribuido a 
+                  formar quien soy hoy. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae mollitia dolores deleniti quis molestias dolore voluptatem, neque harum doloribus non dolorum consectetur accusamus ex soluta ullam deserunt provident pariatur veritatis.
+              </p>
+
+              <p class="text-gray-600 font-light  md:text-lg lg:text-lg">
+                  Mi misión es [tu propósito o objetivo]. Creo firmemente en 
+                  [tus valores o principios fundamentales].
+              </p>
+
+              <!-- Estadísticas -->
+              <div class="grid grid-cols-2 gap-4 mt-8">
+                  <div class="text-center p-4 bg-white rounded-lg shadow">
+                      <span class="block text-3xl font-bold text-custom-pik">10+</span>
+                      <span class="text-custom-pik-dark font-semibold">Años de Experiencia</span>
+                  </div>
+                  <div class="text-center p-4 bg-white rounded-lg shadow">
+                      <span class="block text-3xl font-bold text-custom-pik">50+</span>
+                      <span class="text-custom-pik-dark font-semibold">Proyectos Completados</span>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+          </div>
+      </div>
+  </div>
+</section>
+
+<!-- MISION Y VISION -->
+
+<section>
+  <div class=" grid grid-cols-1 md:grid-cols-2 py-8 px-10 mb-16 gap-16 md:px-16">
+    <div class="py-8 px-2 md:py-6 md:px-14">
+      <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-4xl">Mision</h1>
+      <p class="font-light text-gray-500 text-center md:text-lg lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium nesciunt repudiandae, fugit ea nulla sequi voluptatem sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, magni. Minima possimus iusto optio impedit, libero saepe in earum quo dolore corrupti voluptate consequatur. Quibusdam consequatur sed quaerat autem modi!</p>
     </div>
     <div class="py-8 px-2 md:py-4 md:px-14">
-      <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">¿Que Ofrecemos?</h1>
-      <p class="font-light text-gray-500 text-center lg:mb-8 md:text-lg lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium nesciunt repudiandae, fugit ea nulla sequi voluptatem sed recusandae.</p>
+      <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-4xl">Vision</h1>
+      <p class="font-light text-gray-500 text-center md:text-lg lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium nesciunt repudiandae, fugit ea nulla sequi voluptatem sed recusandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, consequatur aliquam? Consequuntur est impedit dignissimos ab quod, minima rem nisi, enim deleniti quae amet aut corporis, possimus incidunt consequatur iure!</p>
     </div>
+  </div>
+</section>
+
+<!-- POLITICAS DE CALIDA  -->
+
+<section class=" py-8">
+  <div class="max-w-6xl mx-auto px-4">
+      <!-- Encabezado -->
+      <div class="text-center mb-16">
+          <h2 class="mb-4 text-4xl text-custom-pik-dark font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl">Políticas de Calidad</h2>
+          <div class="w-[280px] h-1 bg-custom-pik mx-auto mb-6"></div>
+          <p class="text-gray-600 font-light  md:text-lg lg:text-lg">
+              Nuestro compromiso con la excelencia se refleja en cada aspecto de nuestro trabajo. 
+              Estas políticas guían nuestras acciones para asegurar la más alta calidad en todos nuestros servicios.
+          </p>
+      </div>
+
+      <!-- Compromiso Principal -->
+      <div class="bg-white rounded-lg shadow p-8 mb-12">
+          <h3 class="text-custom-pik-dark text-2xl font-semibold leading-none tracking-tight md:text-2xl">Compromiso con la Calidad</h3>
+          <p class="text-gray-600 font-light  md:text-lg lg:text-lg">
+              [Tu empresa/nombre] se compromete a mantener los más altos estándares de calidad
+              en todos sus procesos y servicios, buscando constantemente la mejora continua
+              y la satisfacción total de nuestros clientes.
+          </p>
+      </div>
+
+      <!-- Grid de Políticas -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
+          <!-- Política 1 -->
+          <div class="bg-white rounded-lg shadow p-6 hover:shadow-xl transition-shadow">
+              <div class="text-blue-500 mb-4">
+                  <i class="fas fa-check-circle text-3xl text-custom-pik"></i>
+              </div>
+              <h4 class="text-xl font-semibold text-gray-800 mb-3">Mejora Continua</h4>
+              <p class="text-gray-600 font-light  md:text-lg lg:text-lg">
+                  Nos comprometemos a evaluar y mejorar constantemente nuestros procesos
+                  para garantizar la máxima calidad en todos nuestros servicios.
+              </p>
+          </div>
+
+          <!-- Política 2 -->
+          <div class="bg-white rounded-lg shadow p-6 hover:shadow-xl transition-shadow">
+              <div class="text-blue-500 mb-4">
+                  <i class="fas fa-users text-3xl text-custom-pik"></i>
+              </div>
+              <h4 class="text-xl font-semibold text-gray-800 mb-3">Enfoque al Cliente</h4>
+              <p class="text-gray-600 font-light  md:text-lg lg:text-lg">
+                  Priorizamos la satisfacción del cliente, adaptando nuestros servicios
+                  a sus necesidades específicas y superando sus expectativas.
+              </p>
+          </div>
+
+          <!-- Política 3 -->
+          <div class="bg-white rounded-lg shadow p-6 hover:shadow-xl transition-shadow">
+              <div class="text-blue-500 mb-4">
+                  <i class="fas fa-cog text-3xl text-custom-pik"></i>
+              </div>
+              <h4 class="text-xl font-semibold text-gray-800 mb-3">Procesos Estandarizados</h4>
+              <p class="text-gray-600 font-light  md:text-lg lg:text-lg">
+                  Implementamos y mantenemos procesos estandarizados que garantizan
+                  la consistencia y calidad en todos nuestros servicios.
+              </p>
+          </div>
+      </div>
+
+      <!-- Objetivos de Calidad -->
+      <div class="bg-white rounded-lg shadow p-8">
+          <h3 class="text-2xl font-semibold text-gray-800 mb-6">Objetivos de Calidad</h3>
+          <div class="space-y-4">
+              <div class="flex items-center gap-4">
+                  <div class="flex-shrink-0 w-6 h-6 bg-custom-pik rounded-full flex items-center justify-center text-white">
+                      1
+                  </div>
+                  <div>
+                      <h5 class="font-semibold text-gray-800">Satisfacción del Cliente</h5>
+                      <p class="text-gray-600">Mantener un índice de satisfacción del cliente superior al 95%.</p>
+                  </div>
+              </div>
+
+              <div class="flex items-center gap-4">
+                  <div class="flex-shrink-0 w-6 h-6 bg-custom-pik rounded-full flex items-center justify-center text-white">
+                      2
+                  </div>
+                  <div>
+                      <h5 class="font-semibold text-gray-800">Eficiencia Operativa</h5>
+                      <p class="text-gray-600">Optimizar tiempos de respuesta y reducir costos operativos en un 15% anual.</p>
+                  </div>
+              </div>
+
+              <div class="flex items-center gap-4">
+                  <div class="flex-shrink-0 w-6 h-6 bg-custom-pik rounded-full flex items-center justify-center text-white">
+                      3
+                  </div>
+                  <div>
+                      <h5 class="font-semibold text-gray-800">Innovación</h5>
+                      <p class="text-gray-600">Implementar al menos 2 mejoras significativas en nuestros procesos cada trimestre.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+
+      <!-- Certificaciones -->
+      <div class="mt-12 text-center">
+          <h3 class="text-2xl font-semibold text-gray-800 mb-6">Nuestras Certificaciones</h3>
+          <div class="flex justify-center gap-8 flex-wrap">
+              <div class="bg-white p-4 rounded-lg shadow">
+                  <i class="fas fa-certificate text-4xl text-blue-500"></i>
+                  <p class="mt-2 font-semibold">ISO 9001:2015</p>
+              </div>
+              <div class="bg-white p-4 rounded-lg shadow">
+                  <i class="fas fa-award text-4xl text-blue-500"></i>
+                  <p class="mt-2 font-semibold">[Otra Certificación]</p>
+              </div>
+          </div>
+      </div>
   </div>
 </section>
 
