--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 
 <div class="grid grid-cols-1 items-center md:grid-cols-2 max-w-6xl mx-auto py-8 px-2 md:py-4 md:px-14 bg-white rounded-lg border">
     <div>
-        <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">Explora Todos Nuestros Productos</h1>
+        <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">¡Explora Todos Nuestros Productos!</h1>
     </div>
 
     <div class="m-auto">
