--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <!-- HERO -->
 
-<section class="bg-white">
+<section class="bg-white pt-8">
     <div class="grid max-w-screen-xl px-10 pt-20 pb-8 mx-auto lg:gap-8 xl:gap-0 lg:py-8 lg:grid-cols-12 lg:pt-8">
         <div class="mr-auto place-self-center lg:col-span-7">
             <h1 class="max-w-2xl mb-4 text-4xl text-custom-pik-dark font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl">
@@ -693,19 +693,22 @@
 </div>
 </div>
 
-<div class="grid grid-cols-1 items-center md:grid-cols-2 max-w-6xl mx-auto py-8 px-2 md:py-4 md:px-14 bg-white rounded-lg border">
-    <div>
-        <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">¡Explora Todos Nuestros Productos!</h1>
-    </div>
-
-    <div class="m-auto">
-        <a href="pdf/HistoriaCatálogoProductosAmoryAmistadRojoyRosa.pdf" 
-           download="catalogo.pdf" 
-           class="bg-custom-pik text-white font-semibold px-6 py-3 rounded-xl shadow-lg inline-flex items-center gap-2">
-            Descargar Catálogo <i class="fa-solid fa-file-pdf text-[20px]"></i>
-        </a>
+<div class="max-w-6xl mx-auto pt-6 px-6">
+    <div class="grid grid-cols-1 items-center md:grid-cols-2 max-w-6xl mx-auto py-8 px-2 md:py-4 md:px-14 bg-white rounded-lg border gap-8">
+        <div>
+            <h1 class="text-custom-pik-dark text-center text-2xl font-extrabold leading-none tracking-tight md:text-2xl">¡Explora Todos Nuestros Productos!</h1>
+        </div>
+    
+        <div class="m-auto">
+            <a href="pdf/HistoriaCatálogoProductosAmoryAmistadRojoyRosa.pdf" 
+               download="catalogo.pdf" 
+               class="bg-custom-pik text-white font-semibold px-6 py-3 rounded-xl shadow-lg inline-flex items-center gap-2">
+                Descargar Catálogo <i class="fa-solid fa-file-pdf text-[20px]"></i>
+            </a>
+        </div>
     </div>
 </div>
+
 
 
 <!-- Sección de Contacto y Ubicación -->
