ajustes entrega final - texto video

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                     <h2 class="text-4xl font-extrabold text-custom-pik-dark mb-4">Nuestra Pasión por las Flores</h2>
 
                     <p class="font-light text-gray-500 md:text-lg lg:text-lg leading-relaxed">
-                        En Floristería Verde, cada arreglo floral cuenta una historia. Nuestro video muestra el amor,
+                        En Decorelis, cada arreglo floral cuenta una historia. Nuestro video muestra el amor,
                         dedicación y arte que ponemos en cada composición. Desde la selección cuidadosa de cada flor
                         hasta la creación de arreglos únicos, te invitamos a descubrir el mundo detrás de nuestras
                         creaciones.
